samples/_failures_safe/1761442275_463ac1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6e79b3b5.c: In function ‘main’:
./samples/SAFE/__tmp_6e79b3b5.c:180:5: error: expected declaration or statement at end of input
  180 |     printf("\nOriginal data (%zu bytes):\n", input_data.size);
      |     ^~~~~~
